// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Expired Password Authenticator Transformer Tests should add updated title element and submit button to UI Schema for expired PW step 1`] = `
{
  "data": {},
  "dataSchema": {
    "credentials.passcode": {
      "validate": [Function],
    },
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [
      "confirmPassword",
      "passwordMatchesValidation",
    ],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "password.expired.title.generic",
        },
        "type": "Title",
      },
      {
        "options": {
          "header": "password.complexity.requirements.header",
          "id": "password-authenticator--list",
          "requirements": [
            {
              "label": "password.complexity.length.description",
              "ruleKey": "minLength",
            },
          ],
          "settings": {
            "complexity": {
              "minLength": 1,
            },
          },
          "userInfo": {
            "identifier": "someuser@noemail.com",
          },
          "validationDelayMs": 50,
        },
        "type": "PasswordRequirements",
      },
      {
        "noMargin": true,
        "options": {
          "name": "username",
          "value": "someuser@noemail.com",
        },
        "type": "HiddenInput",
      },
      {
        "label": "Password",
        "options": {
          "attributes": {
            "autocomplete": "new-password",
          },
          "inputMeta": {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "key": "confirmPassword",
        "label": "oie.password.confirmPasswordLabel",
        "options": {
          "attributes": {
            "autocomplete": "new-password",
          },
          "inputMeta": {
            "messages": {
              "value": undefined,
            },
            "name": "confirmPassword",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "key": "passwordMatchesValidation",
        "options": {
          "validationDelayMs": 50,
        },
        "type": "PasswordMatches",
      },
      {
        "label": "password.expired.submit",
        "options": {
          "step": "reenroll-authenticator",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Expired Password Authenticator Transformer Tests should add updated title element and submit button to UI Schema for expired PW step with brandName provided 1`] = `
{
  "data": {},
  "dataSchema": {
    "credentials.passcode": {
      "validate": [Function],
    },
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [
      "confirmPassword",
      "passwordMatchesValidation",
    ],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "password.expired.title.specific",
        },
        "type": "Title",
      },
      {
        "options": {
          "header": "password.complexity.requirements.header",
          "id": "password-authenticator--list",
          "requirements": [
            {
              "label": "password.complexity.length.description",
              "ruleKey": "minLength",
            },
          ],
          "settings": {
            "complexity": {
              "minLength": 1,
            },
          },
          "userInfo": {
            "identifier": "someuser@noemail.com",
          },
          "validationDelayMs": 50,
        },
        "type": "PasswordRequirements",
      },
      {
        "noMargin": true,
        "options": {
          "name": "username",
          "value": "someuser@noemail.com",
        },
        "type": "HiddenInput",
      },
      {
        "label": "Password",
        "options": {
          "attributes": {
            "autocomplete": "new-password",
          },
          "inputMeta": {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "key": "confirmPassword",
        "label": "oie.password.confirmPasswordLabel",
        "options": {
          "attributes": {
            "autocomplete": "new-password",
          },
          "inputMeta": {
            "messages": {
              "value": undefined,
            },
            "name": "confirmPassword",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "key": "passwordMatchesValidation",
        "options": {
          "validationDelayMs": 50,
        },
        "type": "PasswordMatches",
      },
      {
        "label": "password.expired.submit",
        "options": {
          "step": "reenroll-authenticator",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;

exports[`Expired Password Authenticator Transformer Tests should add updated title element and submit button to UI Schema for expired PW step without password policy settings 1`] = `
{
  "data": {},
  "dataSchema": {
    "credentials.passcode": {
      "validate": [Function],
    },
    "fieldsToExclude": [Function],
    "fieldsToTrim": [],
    "fieldsToValidate": [
      "confirmPassword",
      "passwordMatchesValidation",
    ],
    "submit": {
      "step": "challenge-authenticator",
    },
  },
  "schema": {},
  "uischema": {
    "elements": [
      {
        "options": {
          "content": "password.expired.title.generic",
        },
        "type": "Title",
      },
      {
        "noMargin": true,
        "options": {
          "name": "username",
          "value": "someuser@noemail.com",
        },
        "type": "HiddenInput",
      },
      {
        "label": "Password",
        "options": {
          "attributes": {
            "autocomplete": "new-password",
          },
          "inputMeta": {
            "name": "credentials.passcode",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "key": "confirmPassword",
        "label": "oie.password.confirmPasswordLabel",
        "options": {
          "attributes": {
            "autocomplete": "new-password",
          },
          "inputMeta": {
            "messages": {
              "value": undefined,
            },
            "name": "confirmPassword",
            "secret": true,
          },
        },
        "type": "Field",
      },
      {
        "key": "passwordMatchesValidation",
        "options": {
          "validationDelayMs": 50,
        },
        "type": "PasswordMatches",
      },
      {
        "label": "password.expired.submit",
        "options": {
          "step": "reenroll-authenticator",
          "type": "submit",
        },
        "type": "Button",
      },
    ],
    "type": "VerticalLayout",
  },
}
`;
